--- a/naming.html
+++ b/naming.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>中文取名神器 - 专业起名服务</title>
     <meta name="description" content="专业的中文取名工具，结合五行八字、诗词典故，为您的宝宝起个好名字">
-    <link rel="stylesheet" href="naming-style.css">
+    <link rel="stylesheet" href="/mywork/naming-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@300;400;500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -330,6 +330,6 @@
         </div>
     </footer>
 
-    <script src="naming-script.js"></script>
+    <script src="/mywork/naming-script.js"></script>
 </body>
 </html>
